webui.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webui-frontend
spec:
  selector:
    app: webui
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
